# SeqViz

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: columba_livia_cytb.fasta  coturnix_japonica_cytb.fasta  gallus_gallus_cytb.fasta  streptopelia_senegalensis_cytb.fasta
src/seqviz/: __main__.py  cli.py  download_examples.py  fasta_utils.py  scoring.py
src/seqviz/algorithms/: needleman_wunsch.py  smith_waterman.py
src/seqviz/visualise/: heatmap.py  terminal.py
tests/: test_alignment.py  test_fasta.py
tests/fixtures/: invalid_chars.fasta  multi_record.fasta  multiline.fasta  no_header.fasta  valid.fasta
