[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SeqViz"
version = "0.1.0"
description = "CLI tool for DNA/protein sequence alignment using Needleman-Wunsch & Smith-Waterman, with heatmap and terminal visualisation"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Ryan Young", email = "ryanyoung2k@gmail.com" }
]
keywords = [
  "bioinformatics",
  "sequence-alignment",
  "needleman-wunsch",
  "smith-waterman",
  "genomics",
  "cli",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.11"

dependencies = [
  "click>=8.1.0"            # CLI argument parsing
  "typer>=0.12.0",          # CLI argument parsing, built on Click
  "rich>=13.7.0",           # Coloured terminal output for match/mismatch/gap
  "numpy>=1.26.0",          # Scoring matrix maths
  "matplotlib>=3.8.0",      # Heatmap rendering
  "seaborn>=0.13.0",        # Nicer heatmap styling on top of matplotlib
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.0",            # Linter + formatter (replaces flake8 + black)
  "mypy>=1.10.0",           # Type checking
]

[project.scripts]
SeqViz = "SeqViz.cli:app"  # `SeqViz align ACGT TGCA` in your terminal

[project.urls]
Homepage   = "https://github.com/BarefootRobber/SeqViz"
Repository = "https://github.com/BarefootRobber/SeqViz"
Issues     = "https://github.com/BarefootRobber/SeqViz/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/SeqViz"]

[tool.ruff]
line-length    = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]  # errors, pyflakes, isort, naming, warnings

[tool.mypy]
python_version      = "3.11"
strict              = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--cov=SeqViz --cov-report=term-missing"
