[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seqviz"
version = "0.1.0"
description = "CLI tool for DNA/protein sequence alignment using Needleman-Wunsch & Smith-Waterman, with heatmap and terminal visualisation"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Ryan Young", email = "ryanyoung2k@gmail.com" }
]
keywords = [
  "bioinformatics",
  "sequence-alignment",
  "needleman-wunsch",
  "smith-waterman",
  "genomics",
  "cli",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.11"

dependencies = [
  "click>=8.1.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "numpy>=1.26.0",
  "matplotlib>=3.8.0",
  "seaborn>=0.13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
]

[project.scripts]
seqviz = "seqviz.cli:main"

[project.urls]
Homepage   = "https://github.com/BarefootRobber/SeqViz"
Repository = "https://github.com/BarefootRobber/SeqViz"
Issues     = "https://github.com/BarefootRobber/SeqViz/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/seqviz"]

[tool.ruff]
line-length    = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version      = "3.11"
strict              = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--cov=seqviz --cov-report=term-missing"
